--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2017-09-03
+resolver: nightly-2017-10-08
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -45,8 +45,7 @@ packages:
 - 'demo'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps:
-- th-utilities-0.2.0.1
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 flags: {}
