--- a/asm-core/asm-core.cabal
+++ b/asm-core/asm-core.cabal
@@ -1,7 +1,7 @@
 name:
   asm-core
 version:
-  0.4.0
+  0.4.1
 synopsis:
   The abstract assembler itself
 homepage:
@@ -124,7 +124,7 @@ library {
     Asm.Core.SourcePos.Type
   }
   build-depends:
-    { asm-data == 0.4.*
+    { asm-data == 0.4.1
     , base
     , bytestring
     , classy-prelude
