--- a/asm-parser/asm-parser.cabal
+++ b/asm-parser/asm-parser.cabal
@@ -85,6 +85,7 @@ library {
     , text
     , vector
     , wl-pprint-text
+    , parser-combinators
     }
   default-extensions: {
     BinaryLiterals
