--- a/asm-cpu6502/package.yaml
+++ b/asm-cpu6502/package.yaml
@@ -11,7 +11,7 @@ dependencies:
 - asm-core ==0.5.0
 - asm-data ==0.5.0
 - asm-parser ==0.5.0
-- base
+- base >=4.9
 - containers
 - extra
 - heredoc
