--- a/asm-parser/package.yaml
+++ b/asm-parser/package.yaml
@@ -10,13 +10,13 @@ homepage: https://github.com/alexkazik/asm
 dependencies:
 - asm-core ==0.5.0
 - asm-data ==0.5.0
-- base
+- base >=4.9
 - classy-prelude
 - containers
 - filepath
 - haskell-src-exts
 - haskell-src-meta
-- megaparsec
+- megaparsec >=7
 - mtl
 - scientific
 - split
